--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -51,11 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiModel.cs" />
+    <Compile Include="ApiResource.cs" />
     <Compile Include="ApiResponse.cs" />
     <Compile Include="JsonApi.cs" />
-    <Compile Include="ModelAttribute.cs" />
-    <Compile Include="ModelRelationship.cs" />
+    <Compile Include="ResourceAttribute.cs" />
+    <Compile Include="ResourceRelationship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelationshipType.cs" />
     <Compile Include="StringExtensions.cs" />
