--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -66,7 +66,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="ApiModelTests.cs" />
+    <Compile Include="ApiResourceTests.cs" />
     <Compile Include="Experiments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionsTests.cs" />
