--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -52,12 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
-    <Compile Include="ApiResponse.cs" />
+    <Compile Include="Serialization\ApiResponse.cs" />
     <Compile Include="JsonApi.cs" />
     <Compile Include="ResourceAttribute.cs" />
     <Compile Include="ResourceRelationship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelationshipType.cs" />
+    <Compile Include="Serialization\JsonApiSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
