--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Experiments.cs" />
     <Compile Include="JsonApiSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleModels\Company.cs" />
     <Compile Include="SampleModels\Person.cs" />
     <Compile Include="StringExtensionsTests.cs" />
   </ItemGroup>
