--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -62,14 +62,16 @@
     <Compile Include="ApiResource.cs" />
     <Compile Include="Http\ApiResourceAttribute.cs" />
     <Compile Include="Http\JsonApiMediaTypeFormatter.cs" />
+    <Compile Include="Serialization\ApiError.cs" />
     <Compile Include="Serialization\ApiResponse.cs" />
     <Compile Include="ResourceAttribute.cs" />
     <Compile Include="ResourceRelationship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelationshipType.cs" />
-    <Compile Include="Serialization\JsonApiDeserializer.cs" />
+    <Compile Include="Serialization\ErrorSerializer.cs" />
+    <Compile Include="Serialization\ResourceDeserializer.cs" />
     <Compile Include="JsonApiException.cs" />
-    <Compile Include="Serialization\JsonApiSerializer.cs" />
+    <Compile Include="Serialization\ResourceSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
