--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -79,7 +79,8 @@
     <Compile Include="ApiResourceTests.cs" />
     <Compile Include="Experiments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleModels\Person.cs" />
+    <Compile Include="Helpers\Person.cs" />
+    <Compile Include="Serialization\LinkCreationTests.cs" />
     <Compile Include="Serialization\ResourceDeserializerTests.cs" />
     <Compile Include="Serialization\ErrorSerializerTests.cs" />
     <Compile Include="Serialization\ResourceSerializerTests.cs" />
