--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,10 @@
 version: 1.0.{build}
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
 install:
 - ps: nuget restore
 build:
