Unit tests for bug: default constructor must instantiate JsonSerializer

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="ApiResourceTests.cs" />
     <Compile Include="Experiments.cs" />
+    <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Person.cs" />
     <Compile Include="Serialization\UrlConstructionTests.cs" />
