--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -65,8 +65,10 @@
     <Compile Include="Http\PaginatedAttribute.cs" />
     <Compile Include="Http\ReturnsResourceAttribute.cs" />
     <Compile Include="Http\JsonApiMediaTypeFormatter.cs" />
+    <Compile Include="Queries\PaginationContext.cs" />
     <Compile Include="Queries\PaginationInterpreter.cs" />
     <Compile Include="Queries\QueryMethods.cs" />
+    <Compile Include="Queries\PaginationQuery.cs" />
     <Compile Include="Serialization\ApiError.cs" />
     <Compile Include="ResourceAttribute.cs" />
     <Compile Include="ResourceRelationship.cs" />
