--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Person.cs" />
+    <Compile Include="Queries\PaginationInterpreterTests.cs" />
+    <Compile Include="Queries\PaginationQueryTests.cs" />
     <Compile Include="Serialization\UrlConstructionTests.cs" />
     <Compile Include="Serialization\ResourceDeserializerTests.cs" />
     <Compile Include="Serialization\ErrorSerializerTests.cs" />
