--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="ApiResourceTests.cs" />
     <Compile Include="Experiments.cs" />
+    <Compile Include="Helpers\GuidAsId.cs" />
     <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="JsonApiSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
