--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -91,6 +91,8 @@
     <Compile Include="JsonApiSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Person.cs" />
+    <Compile Include="Queries\PaginationInterpreterTests.cs" />
+    <Compile Include="Queries\PaginationQueryTests.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilderTests.cs" />
     <Compile Include="Serialization\UrlConstructionTests.cs" />
     <Compile Include="Serialization\ResourceDeserializerTests.cs" />
