--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -67,7 +67,7 @@
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
     <Compile Include="JsonApiSerializer.cs" />
-    <Compile Include="Http\Constants.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilder.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilder.cs" />
     <Compile Include="Serialization\IUrlPathBuilder.cs" />
