--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -43,9 +43,6 @@
       <HintPath>..\packages\Humanizer.1.37.7\lib\portable-win+net40+sl50+wp8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Humanizer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -85,16 +82,23 @@
   <ItemGroup>
     <Compile Include="ApiResourceTests.cs" />
     <Compile Include="Experiments.cs" />
-    <Compile Include="Helpers\Company.cs" />
-    <Compile Include="Helpers\CompanyResource.cs" />
-    <Compile Include="Helpers\GuidAsId.cs" />
-    <Compile Include="Helpers\PersonResource.cs" />
-    <Compile Include="Helpers\PersonWithNoId.cs" />
-    <Compile Include="Helpers\PersonWithNoJob.cs" />
-    <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\CompanyResource.cs" />
+    <Compile Include="Models\GuidAsId.cs" />
+    <Compile Include="Helpers\JsonApiServer.cs" />
+    <Compile Include="Helpers\Paths.cs" />
+    <Compile Include="Models\PersonResource.cs" />
+    <Compile Include="Models\PersonWithNoId.cs" />
+    <Compile Include="Models\PersonWithNoJob.cs" />
+    <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="JsonApiSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\Person.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Queries\PaginationInterpreterTests.cs" />
     <Compile Include="Queries\PaginationQueryTests.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilderTests.cs" />
@@ -102,6 +106,7 @@
     <Compile Include="Serialization\ResourceDeserializerTests.cs" />
     <Compile Include="Serialization\ErrorSerializerTests.cs" />
     <Compile Include="Serialization\ResourceSerializerTests.cs" />
+    <Compile Include="SpecificationConformity\ContentNegotiationTests.cs" />
     <Compile Include="StringExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -114,7 +119,12 @@
       <Name>Saule</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
