--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.2.{build}
+version: 1.3.0.{build}
 configuration: Release
 assembly_info:
   patch: true
@@ -17,3 +17,15 @@ deploy:
     secure: dtP6YFOY3quvyRlH0DYG/i4AbOegM/5oT8Q+IcpKMqKZgBiAmm+XRs2TN9+ju9oe
   on:
     branch: master
+    appveyor_repo_tag: true
+- release: saule-v$(appveyor_build_version)
+  description: ''
+  provider: GitHub
+  auth_token:
+    secure: 00qfkOL3Upz61CDrcEkLV+Vnn2gY4zypijGU3oUXeyxI8pNYElkLMJGzgSOEcVnH
+  artifact: /.*\.nupkg/
+  draft: false
+  prerelease: false
+  on:
+    branch: master
+    appveyor_repo_tag: true
