--- a/Saule/packages.config
+++ b/Saule/packages.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Humanizer" version="1.37.7" targetFramework="net451" />
-  <package id="Microsoft.AnalyzerPowerPack" version="1.0.1" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="6.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
-  <package id="System.Runtime.Analyzers" version="1.0.1" targetFramework="net46" />
-  <package id="System.Runtime.InteropServices.Analyzers" version="1.0.1" targetFramework="net46" />
+  <package id="StyleCop.Analyzers" version="1.0.0-beta015" targetFramework="net451" developmentDependency="true" />
 </packages>
