--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -71,6 +71,8 @@
     <Compile Include="ApiResource.cs" />
     <Compile Include="JsonApiSerializer.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="JsonApiSerializerOfT.cs" />
+    <Compile Include="ResourceRelationshipOfT.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilder.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilder.cs" />
     <Compile Include="Serialization\IUrlPathBuilder.cs" />
