--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -75,6 +75,7 @@
     <Compile Include="JsonApiSerializer.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
+    <Compile Include="Queries\Lambda.cs" />
     <Compile Include="Queries\Query.cs" />
     <Compile Include="Queries\QueryContext.cs" />
     <Compile Include="Queries\SortingInterpreter.cs" />
