--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Experiments.cs" />
     <Compile Include="Helpers\Get.cs" />
     <Compile Include="Helpers\HttpClientExtensions.cs" />
+    <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Integration\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyResource.cs" />
@@ -132,6 +133,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
