--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,7 +3,12 @@
   <package id="Humanizer" version="1.37.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="xunit" version="2.0.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
