--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.3.0.{build}
+version: 1.4.0.{build}
 configuration: Release
 assembly_info:
   patch: true
@@ -19,8 +19,14 @@ deploy:
     secure: dtP6YFOY3quvyRlH0DYG/i4AbOegM/5oT8Q+IcpKMqKZgBiAmm+XRs2TN9+ju9oe
   on:
     branch: master
-- provider: NuGet
-  api_key:
-    secure: dtP6YFOY3quvyRlH0DYG/i4AbOegM/5oT8Q+IcpKMqKZgBiAmm+XRs2TN9+ju9oe
+- release: saule-v$(appveyor_build_version)
+  description: ''
+  provider: GitHub
+  auth_token:
+    secure: 00qfkOL3Upz61CDrcEkLV+Vnn2gY4zypijGU3oUXeyxI8pNYElkLMJGzgSOEcVnH
+  artifact: /.*\.nupkg/
+  draft: true
+  prerelease: false
   on:
-    appveyor_repo_tag: true
+    appveyor_repo_tag: false
+    branch: /release-v.+/
