--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -9,10 +9,11 @@
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="xunit" version="2.0.0" targetFramework="net46" />
+  <package id="xunit" version="2.1.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.0.1" targetFramework="net46" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net46" />
 </packages>
