--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
     <Compile Include="Http\AllowsQueryAttribute.cs" />
+    <Compile Include="Http\HttpConfigExtensions.cs" />
+    <Compile Include="Http\JsonApiConfiguration.cs" />
     <Compile Include="JsonApiSerializer.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
