--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ deploy:
   api_key:
     secure: dtP6YFOY3quvyRlH0DYG/i4AbOegM/5oT8Q+IcpKMqKZgBiAmm+XRs2TN9+ju9oe
   on:
-    branch: master
+    branch: /(master|release-v.+)/
 - release: saule-v$(appveyor_build_version)
   description: ''
   provider: GitHub
