intermdiate commit, been working on this too long

--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -41,6 +41,9 @@
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="csharp-extensions">
+      <HintPath>D:\ClientDevelopment\AllisonTransmission\Integration.API\packages\csharp-extensions.1.2.5\lib\net46\csharp-extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Humanizer, Version=1.37.7.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
       <HintPath>..\packages\Humanizer.1.37.7\lib\portable-win+net40+sl50+wp8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Humanizer.dll</HintPath>
       <Private>True</Private>
