Extract ResourceSerializer to interface

--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Queries\Sorting\SortingContext.cs" />
     <Compile Include="Queries\Sorting\SortingDirection.cs" />
     <Compile Include="Queries\Sorting\SortingProperty.cs" />
+    <Compile Include="Serialization\IResourceSerializer.cs" />
     <Compile Include="ResourceRelationshipOfT.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilder.cs" />
     <Compile Include="Serialization\JsonApiContractResolver.cs" />
