Resource graph tests

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -148,6 +148,9 @@
     <Compile Include="Queries\PaginationQueryTests.cs" />
     <Compile Include="Serialization\CanonicalUrlPathBuilderTests.cs" />
     <Compile Include="Serialization\DefaultUrlPathBuilderTests.cs" />
+    <Compile Include="Serialization\ResourceGraphNodeKeyTests.cs" />
+    <Compile Include="Serialization\ResourceGraphSerializerTests.cs" />
+    <Compile Include="Serialization\ResourceGraphPathSetTests.cs" />
     <Compile Include="Serialization\UrlConstructionTests.cs" />
     <Compile Include="Serialization\ResourceDeserializerTests.cs" />
     <Compile Include="Serialization\ErrorSerializerTests.cs" />
