Serialize all IDs as string in graph serializer

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -134,6 +134,8 @@
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="JsonApiSerializerTests.cs" />
     <Compile Include="Models\Recursion.cs" />
+    <Compile Include="Models\Widget.cs" />
+    <Compile Include="Models\WidgetResource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
