--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="JsonApiSerializer.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
+    <Compile Include="LinkType.cs" />
     <Compile Include="NullGuardExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="PreprocessResult.cs" />
