Worked in app level configuration for page sizes.

--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -64,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiResource.cs" />
-    <Compile Include="Configuration\PaginationConfig.cs" />
+    <Compile Include="Http\PaginationConfig.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
     <Compile Include="StringDictionaryExtensions.cs" />
     <Compile Include="Http\DisableDefaultIncludedAttribute.cs" />
