Improve docs website
- Autogenerate the navigation
- Remove outdated information
- Use a custom theme for now (should probably change)

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,8 @@
-theme: jekyll-theme-cayman
+repository: joukevandermaas/saule
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  hard_wrap: false
+  syntax_highlighter: rouge
+title: Saule
