made new booker-saule branch

--- a/Saule/Saule.nuspec
+++ b/Saule/Saule.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>saule</id>
+    <id>Booker.saule</id>
     <version>$version$</version>
     <title>Saule for Json Api</title>
     <authors>Jouke van der Maas</authors>
@@ -9,7 +9,7 @@
     <licenseUrl>https://github.com/joukevandermaas/saule/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/joukevandermaas/saule/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Json api library for ASP.Net Web API 2</description>
+    <description>Json api library for ASP.Net Web API 2. This is custom package for MyGet based on original Saule</description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>web api serialization media formatter json api jsonapi ember data</tags>
