WIP: Move to common to netstandard and combine some files
This should reduce the amount of target-specific code outside of
Saule.Common.

--- a/Saule.AspNetCore/Saule.AspNetCore.csproj
+++ b/Saule.AspNetCore/Saule.AspNetCore.csproj
@@ -32,6 +32,7 @@
   
   <PropertyGroup>
     <DocumentationFile>bin\$(Configuration)\netcoreapp2.0\Saule.AspNetCore.xml</DocumentationFile>
+    <RootNamespace>Saule</RootNamespace>
   </PropertyGroup>
   
 </Project>
