--- a/Saule.Common/Saule.Common.csproj
+++ b/Saule.Common/Saule.Common.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <CodeAnalysisRuleSet>$(SolutionDir)\StyleCop.Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Saule.Common.xml</DocumentationFile>
+    <RootNamespace>Saule</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
