Make core tests pass again

--- a/Saule.AspNet.Tests/Saule.AspNet.Tests.csproj
+++ b/Saule.AspNet.Tests/Saule.AspNet.Tests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Saule.Common\Saule.Common.csproj" />
     <ProjectReference Include="..\Saule.AspNet\Saule.AspNet.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 </Project>
