--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,8 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 
+image: Visual Studio 2017
+
 build:
   publish_nuget: true
   verbosity: minimal
