--- a/Saule.AspNet.Tests/Saule.AspNet.Tests.csproj
+++ b/Saule.AspNet.Tests/Saule.AspNet.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.3" />
     <PackageReference Include="Microsoft.Owin.Testing" Version="4.0.0-alpha1" />
     <PackageReference Include="xunit" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
